--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@angular/platform-browser-dynamic": "~12.2.2",
     "@angular/platform-server": "~12.2.2",
     "@angular/router": "~12.2.2",
+    "@fortawesome/angular-fontawesome": "^0.10.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "bootstrap": "^5.1.0",
     "jquery": "^3.5.1",
     "oidc-client": "^1.11.5",
