--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@fortawesome/angular-fontawesome": "^0.10.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "bootstrap": "^5.1.0",
+    "http-server": "^14.0.0",
     "jquery": "^3.5.1",
     "oidc-client": "^1.11.5",
     "popper.js": "^1.16.0",
@@ -51,6 +52,5 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "typescript": "^4.2.4"
-  },
-  "optionalDependencies": {}
+  }
 }
