--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@angular/router": "~12.2.2",
     "@fortawesome/angular-fontawesome": "^0.10.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@ngx-translate/core": "^13.0.0",
+    "@ngx-translate/http-loader": "^6.0.0",
     "bootstrap": "^5.1.0",
     "http-server": "^14.0.0",
     "jquery": "^3.5.1",
