--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "http-server": "^14.0.0",
     "jquery": "^3.5.1",
     "ng2-tooltip-directive": "^2.10.3",
+    "ngx-translate": "^0.0.1-security",
     "oidc-client": "^1.11.5",
     "popper.js": "^1.16.0",
     "run-script-os": "^1.1.6",
