--- a/angular.json
+++ b/angular.json
@@ -32,7 +32,9 @@
                         "styles": [
                             "./node_modules/@angular/material/prebuilt-themes/purple-green.css",
                             "node_modules/bootstrap/dist/css/bootstrap.min.css",
-                            "src/styles.css"
+                            "src/styles.css",
+                            "node_modules/@fortawesome/fontawesome-free/js/all.js",
+                            "node_modules/@fortawesome/fontawesome-free/css/all.css"
                         ],
                         "scripts": []
                     },
