--- a/angular.json
+++ b/angular.json
@@ -129,6 +129,9 @@
                             "vendorChunk": false
                         }
                     }
+                },
+                "deploy": {
+                    "builder": "angular-cli-ghpages:deploy"
                 }
             }
         }
